# INFT2503-C-

Oving_1/Oving_1/: CMakeLists.txt  oppgave_a.cpp  oppgave_b.cpp
Oving_2/Oving_2/: CMakeLists.txt  oppgave_1a.cpp  oppgave_1b.cpp  oppgave_2.txt  oppgave_3.cpp  oppgave_4.cpp  oppgave_5.cpp  oppgave_6.cpp
Oving_3/Oving_3/: CMakeLists.txt  commodity.cpp  commodity.hpp  oppgave_1.cpp  oppgave_2.cpp  oppgave_3.cpp  oppgave_4.cpp
Oving_4/Oving_4/: CMakeLists.txt  oppgave_1.cpp  oppgave_2.cpp
Oving_5/Oving_5/: CMakeLists.txt  oppgave_1_og_2.cpp
Oving_6/Oving_6/: CMakeLists.txt  oppgave_1.cpp  oppgave_2.cpp
Oving_7/oving_7/Oppgave_2/: CMakeLists.txt  main.cpp  set.cpp  set.hpp
Oving_7/oving_7/fraction/: fraction.cpp  fraction.hpp  main.cpp
Oving_8/oving_8/: CMakeLists.txt  oppgave_1.cpp  oppgave_2.cpp  point.cpp  point.hpp
Oving_9/Oving_9/: CMakeLists.txt  main.cpp
