cmake_minimum_required(VERSION 3.1)

project(Oving_2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")

add_executable(oppgave_1a oppgave_1a.cpp)

add_executable(oppgave_1b oppgave_1b.cpp)

add_executable(oppgave_3 oppgave_3.cpp)

add_executable(oppgave_4 oppgave_4.cpp)

add_executable(oppgave_5 oppgave_5.cpp)

add_executable(oppgave_6 oppgave_6.cpp)
